--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
     "styled-components": "^4.4.0"
   },
   "scripts": {
